--- a/map_fastqs.yaml
+++ b/map_fastqs.yaml
@@ -5,20 +5,31 @@ indexed_genome_path: '/work/bailey_share/resources/from_others/KevinW_resources/
 #this program expects a single folder containing all of your fastq files. You
 #can make soft links to place your fastq files in a single folder (and rename
 #them) if needed.
-fastq_folder: /nfs/jbailey5/baileyweb/asimkin/seekdeep/DR_amplicon_panel/isabela_expanded_panel/ashenafi_haplotypes/haplotypes_by_sample
+fastq_folder: /nfs/jbailey5/baileyweb/igyuricz/DrugResistAmp_3D7/input_files/new_primer_ratios_trial/fastq_softlinks
 
 #sample names associated with your fastq file. Only include the unique
 #beginnings of sample names (file extensions, mate pair numbers, etc. go in
 #'suffixes' below)
 samples:
-  - other_entries
+  - 3D7-DBS3-1K-Rep32
+  - 3D7-DBS3-1K-Rep31
+  - 3D7-DBS2-1K-Rep22
+  - 3D7-DBS2-1K-Rep21
+  - 3D7-DBS1-1K-Rep12
+  - 3D7-DBS1-1K-Rep11
+  - 3D7-DBS3-10K-Rep32
+  - 3D7-DBS3-10K-Rep31
+  - 3D7-DBS2-10K-Rep22
+  - 3D7-DBS2-10K-Rep21
+  - 3D7-DBS1-10K-Rep12
+  - 3D7-DBS1-10K-Rep11
 
-mate1_suffix: .fastq #part of file name ending shared across all samples. If
+mate1_suffix: _R1.fastq.gz #part of file name ending shared across all samples. If
 #unpaired, file extensions of read files, e.g. .fastq, _L001.fastq,
 #_L001.fastq.gz, etc. If paired, could be _R1.fastq.gz, _L001_R1.fastq, etc.
-mate2_suffix: '' #leave this as empty quotes if unpaired. If paired, add mate2
+mate2_suffix: _R2.fastq.gz #leave this as empty quotes if unpaired. If paired, add mate2
 #suffix, e.g. _R2.fastq.gz, _L001.fastq, etc.
 
 #location where your output data will be sent.
-output_folder: Ashenafi_Ethiopia_samples_other_entries_testing
+output_folder: 04-30-23_new_primer_ratios_trial
 
